+DB context +entities

--- a/HRP.Web.API/appsettings.Development.json
+++ b/HRP.Web.API/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "HRPConnection": "Server=.\\MSQL2022;Database=HRP;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
