--- a/HRP.Application/HRP.Application.csproj
+++ b/HRP.Application/HRP.Application.csproj
@@ -10,4 +10,12 @@
     <ProjectReference Include="..\HRP.Domain\HRP.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
 </Project>
