--- a/HRP.Web.API/HRP.Web.API.csproj
+++ b/HRP.Web.API/HRP.Web.API.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Negotiate" Version="7.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.5">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HRP.Application\HRP.Application.csproj" />
+    <ProjectReference Include="..\HRP.Persistence\HRP.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
