--- a/HRP.Application/HRP.Application.csproj
+++ b/HRP.Application/HRP.Application.csproj
@@ -11,11 +11,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="CQRS\Employee\Commands\DeleteEmployee\" />
+    <Folder Include="CQRS\Employee\Commands\UpdateEmployee\" />
+    <Folder Include="CQRS\Employee\Queries\GetEmployeeList\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Tools\Exceptions\" />
+    <Folder Include="ViewModels\Employee\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
